# rusty-slack-weather-status

./: Cargo.toml  README.md  emoji_map.md
.circleci/: config.yml
embed/: alert_emoji_map.toml  weather_emoji_map.toml
src/: embed.rs  forecast.rs  lib.rs  main.rs  models.rs  slack.rs
src/models/: forecast.rs  temp_diff.rs  tenki_jp_forecast.rs
tests/: multiple_alert.html  multiple_warn_alert.html  special_warning.html
