[package]
name = "rusty-slack-weather-status"
version = "0.1.0"
authors = ["shinespark <shnsprk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
env_logger = "0.8.1"
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
scraper = "0.12.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
pretty_assertions = "*"
