[package]
name = "rusty-slack-weather-status"
version = "0.1.0"
authors = ["shinespark <shnsprk@gmail.com>"]
edition = "2024"

[dependencies]
clap = "~2.27.0"
env_logger = "0.8.1"
lazy_static = "1.4.0"
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
rust-embed = "6.3.0"
scraper = "0.12.0"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"

[dev-dependencies]
pretty_assertions = "*"
